# geneea

./: .deepsource.toml  .editorconfig  .gitignore  LICENSE  Makefile  README.md  analyze_day_ago.sh  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: main.yml
data/: input.txt  input_analysis.json  output.json  output.txt  test_write_0.xml  test_write_1.xml
docs/: Design.md  NOTES.md  conf.py  index.rst
docs/data/: demo.xml
docs/examples/: Basic Client Usage.ipynb  Document-Analysis.ipynb  analysis.json  analysis.xml  input.txt  raw_requests.py  sdk_request.py
scripts/: analyze-day-ago.sh
src/: __init__.py  __main__.py  _client.py  _datamodel.py
src/cro/geneea/: __init__.py  __main__.py  _client.py  _datamodel.py  _domain.py  _model.py
src/cro/geneea/sdk/: __init__.py  __main__.py  _client.py  _domain.py
src/cro/geneea/sdk/_client/: __init__.py
src/cro/geneea/sdk/_domain/: __init__.py
tests/: context.py  test_client.py  test_domain.py  test_package.py  test_program.py  test_sample.py
