[metadata]
name = cro.geneea.sdk
version = attr: cro.geneea.sdk.__version__
author = Czech Radio
author_email = krystof.pesek@rozhlas.cz
description = Python library to work with Geneea NLP REST service.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czech-radio/cro-geneea-sdk
project_urls =
    Bug Tracker = https://github.com/czech-radio/cro-geneea-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >= 3.10

install_requires =
    pandas
    requests
    openpyxl
    python-dotenv

package_dir =
    = src

packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-html
    pytest-dotenv

lint =
    black[jupyter]
    isort
    flake8

docs =
    sphinx
    jupyterlab

dev = 
    cro.geneea.sdk[test]
    cro.geneea.sdk[lint]
    cro.geneea.sdk[docs]

[options.entry_points]
console_scripts = cro.geneea=cro.geneea.sdk.__main__:main

[tool:pytest]
minversion = 6.0
addopts = -ra -q --maxfail=2
testpaths = tests
console_output_style = progress
markers =
    client: The client tests    # integration
    domain: The domain tests    # unit
    package: The package tests  # unit
    package: The program tests  # integration
env_files =
    .env

[tool:mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True

[tool:black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# extend-exclude = '''
#     /(
#         | tests/data
#     )/
# '''

[tool.isort]
profile = "hug"
src_paths = ["src", "tests"]
